--- a/Programme.adoc
+++ b/Programme.adoc
@@ -24,7 +24,7 @@ Mardi 30 novembre
 | 10h05 | Tahar Allouche : _Truth-tracking via Approval Voting: Size Matters_
 | 10h25 | Pause
 | 10h45 | Zoi
-| 11h25 | 45 min discussions avec les présentateurs
+| 11h25 | Discussions avec les présentateurs de la matinée
 | 12h10 | Fin de la matinée
 | 12h30 | Restaurant
 | 13h30 | Balade sur la digue
