--- a/Programme.adoc
+++ b/Programme.adoc
@@ -9,7 +9,7 @@ Lundi 29 novembre
 [cols="1,4"]
 |===
 
-| 15h00 | Activité à déterminer
+| 16h00 | Visite de Trouville & Deauville, 1h30
 | 20h | Restaurant
 | Soirée | N’hésitez pas à amener des jeux de société ou autres si vous voulez proposer une activité !
 |===
@@ -19,7 +19,8 @@ Mardi 30 novembre
 [cols="1,4"]
 |===
 
-| 9h | Ariane, Théo
+| 9h | Ariane : _Ordinal social rankings_
+| 9h15 | Théo : titre à déterminer
 | 9h30 | Louise Dupuis : _Analyzing the interactions between spaces of argumentation in different contexts_
 | 9h45 | Beatrice Napolitano : _Preference elicitation under incomplete knowledge_
 | 10h05 | Tahar Allouche : _Truth-tracking via Approval Voting: Size Matters_
