--- a/Programme.adoc
+++ b/Programme.adoc
@@ -10,7 +10,7 @@ Lundi 29 novembre
 |===
 
 | 16h00 | Visite de Trouville & Deauville, 1h30
-| 20h | Restaurant https://www.laverriere-deauville.fr/[La Verrière] : 7 rue Breney, 14800 Deauville (https://www.google.com/maps/dir/?api=1&travelmode=walking&origin=Hôtel+Le+Beach,+Quai+Albert+1er,+14360+Trouville-sur-Mer&destination=7+rue+Breney,+14800+Deauville[trajet depuis l’hôtel])
+| 20h | Restaurant https://www.laverriere-deauville.fr/[La Verrière] : 7 rue Breney, 14800 Deauville
 | Soirée | N’hésitez pas à amener des jeux de société ou autres si vous voulez proposer une activité !
 |===
 
