--- a/Programme.adoc
+++ b/Programme.adoc
@@ -9,8 +9,8 @@ Lundi 29 novembre
 [cols="1,4"]
 |===
 
-| 16h00 | Visite de Trouville & Deauville, 1h30
-| 20h | Restaurant https://www.laverriere-deauville.fr/[La Verrière] : 7 rue Breney, 14800 Deauville
+| 16h00 | Visite guidée de Trouville & Deauville (1h30). R-v à l’accueil de https://www.sowell.fr/hotel/le-beach/[notre hôtel].
+| 20h | Restaurant https://www.laverriere-deauville.fr[La Verrière] : https://www.google.fr/maps/search/La+Verrière%2C+7+rue+Breney%2C+14800+Deauville[7 rue Breney, 14800 Deauville]
 | Soirée | N’hésitez pas à amener des jeux de société ou autres si vous voulez proposer une activité !
 |===
 
@@ -28,7 +28,7 @@ Mardi 30 novembre
 | 10h45 | Zoi Terzopoulou : _Realistic models for collective decisions: Dealing with incomplete and biased individual opinions_
 | 11h25 | Discussions avec les présentateurs de la matinée
 | 12h10 | Fin de la matinée
-| 12h30 | Restaurant
+| 12h30 | Restaurant https://chez-nany-deauville.eatbu.com[Chez Nany] : https://www.google.fr/maps/search/Chez+Nany%2C+62+rue+Mirabeaux%2C+14800+Deauville[62-64 Rue Mirabeaux, 14800 Deauville]
 | 13h30 | Balade sur la digue
 | 14h30 | Présentations des volontaires sur le thème AD & société, et discussion ouverte sur le même thème
 | 16h30 | Fin de la réunion
