--- a/Programme.adoc
+++ b/Programme.adoc
@@ -20,7 +20,7 @@ Mardi 30 novembre
 |===
 
 | 9h | Ariane Ravier : titre à déterminer
-| 9h15 | Théo Delemazure : titre à déterminer
+| 9h15 | Théo Delemazure : _Taking the context into account: a new voting framework_
 | 9h30 | Louise Dupuis : _Analyzing the interactions between spaces of argumentation in different contexts_
 | 9h45 | Beatrice Napolitano : _Preference elicitation under incomplete knowledge_
 | 10h05 | Tahar Allouche : _Truth-tracking via Approval Voting: Size Matters_
