--- a/Programme.adoc
+++ b/Programme.adoc
@@ -30,7 +30,7 @@ Mardi 30 novembre
 | 12h10 | Fin de la matinée
 | 12h30 | Restaurant https://chez-nany-deauville.eatbu.com[Chez Nany] : https://www.google.fr/maps/search/Chez+Nany%2C+62+rue+Mirabeaux%2C+14800+Deauville[62-64 Rue Mirabeaux, 14800 Deauville]
 | 13h30 | Balade sur la digue
-| 14h30 | Présentations des volontaires sur le thème AD & société, et discussion ouverte sur le même thème
+| 14h30 | Présentations des volontaires sur le thème AD & société, et discussion ouverte sur le même thème (https://github.com/oliviercailloux/Deauville-2021/raw/master/Pr%C3%A9sentations/Brice%20Mayag.pdf[PDF Brice])
 | 16h30 | Fin de la réunion
 | 17h18 | Départ du train vers Paris (pour info)
 |===
