--- a/Programme.adoc
+++ b/Programme.adoc
@@ -25,7 +25,7 @@ Mardi 30 novembre
 | 9h45 | Beatrice Napolitano : _Preference elicitation under incomplete knowledge_ (https://github.com/oliviercailloux/Deauville-2021/raw/master/Pr%C3%A9sentations/Beatrice%20Napolitano.pdf[PDF])
 | 10h05 | Tahar Allouche : _Truth-tracking via Approval Voting: Size Matters_ (https://github.com/oliviercailloux/Deauville-2021/raw/master/Pr%C3%A9sentations/Tahar%20Allouche.pdf[PDF])
 | 10h25 | Pause
-| 10h45 | Zoi Terzopoulou : _Realistic models for collective decisions: Dealing with incomplete and biased individual opinions_ (https://github.com/oliviercailloux/Deauville-2021/raw/master/Pr%C3%A9sentations/Zoi%Terzopoulou.pdf[PDF])
+| 10h45 | Zoi Terzopoulou : _Realistic models for collective decisions: Dealing with incomplete and biased individual opinions_ (https://github.com/oliviercailloux/Deauville-2021/raw/master/Pr%C3%A9sentations/Zoi%20Terzopoulou.pdf[PDF])
 | 11h25 | Discussions avec les présentateurs de la matinée
 | 12h10 | Fin de la matinée
 | 12h30 | Restaurant https://chez-nany-deauville.eatbu.com[Chez Nany] : https://www.google.fr/maps/search/Chez+Nany%2C+62+rue+Mirabeaux%2C+14800+Deauville[62-64 Rue Mirabeaux, 14800 Deauville]
